<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Novelty</string>

    <!-- TOOLBAR TITLES & ACTIONS -->
    <string name="title_add_feed">Add Feed</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_edit_feed">Edit Feed</string>

    <string name="action_back">Back</string>
    <string name="action_feeds">Feeds</string>
    <string name="action_info">Info</string>
    <string name="action_add_feed">Add Feed</string>
    <string name="action_delete_feed">Delete Feed</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_share">Share</string>

    <!-- TABS -->
    <string name="tab_my_news">BOOKMARKS</string>
    <string name="tab_my_feeds">MY FEEDS</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="nav_news">News</string>
    <string name="nav_feeds">Feeds</string>
    <string name="nav_starred">Starred</string>

    <!-- BUTTONS -->
    <string name="btn_ok">OK</string>
    <string name="btn_rate">RATE APP</string>
    <!--<string name="btn_other_apps">OTHER APPS</string>-->
    <string name="btn_add_feed">ADD FEED</string>
    <string name="btn_save">SAVE</string>

    <!-- SNACKBARS -->
    <string name="error_no_feeds">No feeds found!</string>
    <string name="error_fetching_news">Error fetching new articles!</string>

    <!-- ADD FEED -->
    <string name="feed_title">Title</string>
    <string name="feed_title_too_long">Title too long!</string>
    <string name="feed_title_required">Title is required!</string>
    <string name="feed_title_duplicate">This title already exists!</string>
    <string name="feed_url">URL</string>
    <string name="feed_url_helper">Website or feed URL.</string>
    <string name="feed_url_required">Link is required!</string>
    <string name="feed_url_duplicate">This feed already exists!</string>

    <!-- INFO -->
    <string name="info"><b>Novelty</b> is a simple feed reader with a nice &amp; clean UI.
        \n\nThe application has support for RSS 2.0 and Atom 1.0 feeds and also tries to detect if a website provides such feeds.
        \n\nv%1$s</string>

    <!-- EMPTY VIEWS -->
    <string name="loading">Loading…</string>
    <string name="no_feeds">No feeds!\nYou should add some.</string>
    <string name="no_starred_feeds">Hey, you have no feeds!\nTap here to add one.</string>
    <string name="no_bookmarks">No articles.\nTry bookmarking some.</string>
    <string name="no_news">No articles.\nTry refreshing.</string>

    <!-- ACCESSIBILITY -->
    <string name="description_open_in_browser">Open in browser</string>
    <string name="description_drag">Drag the feed</string>
    <string name="description_star">Add to starred feeds</string>
    <string name="description_unstar">Remove from starred feeds</string>

    <string name="type_atom" translatable="false">Atom</string>
    <string name="type_rss" translatable="false">RSS</string>
    <string name="type_none" translatable="false" />

</resources>